--- a/cv/skills.tex
+++ b/cv/skills.tex
@@ -25,7 +25,7 @@
 
 \cvskill
     {Others} % Category
-    {Post-Doc Representative at UCL's Astrophysics Group (2020)}
+    {Post-Doc Representative at UCL's Astrophysics Group (2020-Present)}
 %   \cvskill
 %     {Languages} % Category
 %     {English: fluent (speaking, reading, writing); Portuguese: native language;  French: intermediate (speaking, reading) and basic (writing); Spanish: basic (writing, speaking,
