--- a/cv.tex
+++ b/cv.tex
@@ -29,7 +29,7 @@
 % Color for highlights
 % Awesome Colors: awesome-emerald, awesome-skyblue, awesome-red, awesome-pink, awesome-orange
 %                 awesome-nephritis, awesome-concrete, awesome-darknight
-\colorlet{awesome}{awesome-red}
+\colorlet{awesome}{awesome-emerald}
 % Uncomment if you would like to specify your own color
 % \definecolor{awesome}{HTML}{CA63A8}
 
@@ -62,12 +62,12 @@
 \email{arthur.loureiro@ucl.ac.uk}
 \homepage{arthurmloureiro.github.io}
 \github{arthurmloureiro}
-%\linkedin{michaelpollind}
+%\linkedin{}
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
 \twitter{@cosmonist}
 
-%\quote{``Be the change that you want to see in the world."}
+%\quote{``o"}
 
 
 %-------------------------------------------------------------------------------
