Update on the current job

--- a/cv/education.tex
+++ b/cv/education.tex
@@ -46,7 +46,7 @@
     {Porto Alegre, Brazil} % Location
     {2010 - 2013} % Date(s)
     {
-    Advisor: Prof. Silvio R. Dahmen
+    Advisor: Prof. Silvio R. Dahmen\linebreak
     Dissertation: Relativistic Thermodynamics applied to Cosmological Models
     }
 %---------------------------------------------------------
