--- a/cv/events.tex
+++ b/cv/events.tex
@@ -10,13 +10,24 @@
 \begin{cventries}
 %---------------------------------------------------------
   \cventry
-    {Organiser} % Role
-    {London Cosmology Discussion Meeting (LCDM)} % Title
-    {London, UK} % Location
-    {2021} % Date(s)
+    {Co-Organiser} % Role
+    {Euclid Weak Lensing Science Working Group Meeting} % Title
+    {Edinburgh, UK} % Location
+    {Dec/2022} % Date(s)
     {
     %   \begin{cvitems} % Description(s)
-{Organiser for a London Cosmology Discussion Meeting online with the theme: ``Breaking LCDM''.}
+{Chaired the session on ``General Relativity effects in new cosmological probes''.}
+    %   \end{cvitems}
+    }
+%---------------------------------------------------------
+  \cventry
+    {Session chair} % Role
+    {GR effects in observing the Large‑Scale Structure of the Universe} % Title
+    {Porto, PT} % Location
+    {Jun/2022} % Date(s)
+    {
+    %   \begin{cvitems} % Description(s)
+{Chaired the session on ``General Relativity effects in new cosmological probes''.}
     %   \end{cvitems}
     }
     
@@ -28,7 +39,7 @@
     {Jan/2019 - Jan/2021} % Date(s)
     {
     %   \begin{cvitems} % Description(s)
-{UCL's Cosmology and Extragalactic weekly seminars}
+{UCL's Cosmology and Extragalactic weekly seminars - \textit{In person \& online}}
     %   \end{cvitems}
     }
     
@@ -66,13 +77,14 @@ University College London.}
   \cventry
     {Organiser} % Role
     {CosmoClub} % Title
-    {Sao Paulo, BR} % Location
+    {São Paulo, BR} % Location
     {2014} % Date(s)
     {
 % Description(s)
         {Journal club and weekly seminars at the Department of Mathematical
-Physics, University of Sao Paulo}
+Physics, University of São Paulo}
     }
+
 
 % \cventry
 %     {Co-organiser} % Role
