--- a/cv/experience.tex
+++ b/cv/experience.tex
@@ -1,27 +1,41 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Research Experience}
+\cvsection{Research \& Work Experience}
 
 
 %-------------------------------------------------------------------------------
 %	CONTENT
 %-------------------------------------------------------------------------------
 \begin{cventries}
+%---------------------------------------------------------
+  \cventry
+    {Post-Doctoral Research Fellow} % Job title
+    {Stockholm University} % Organization
+    {Stockholm, Sweden} % Location
+    {March. 2023 - Ongoing} % Date(s)
+    {
+    Post-doctoral research fellow working with Prof. Jens Jasche and Prof. Hiranya Peiris on bayesian hierarchical models for LSST DESC (50\% FTE in-kind contributions).
+    }
 
 %---------------------------------------------------------
   \cventry
-    {Research Fellow} % Job title
+    {Senior Scientist/Developer (50\% FTE until Oct. 2022)} % Job title
+    {University of Edinburgh} % Organization
+    {Edinburgh, United Kingdom} % Location
+    {Sept. 2021 - Feb. 2023} % Date(s)
+    {
+    Euclid SGS Senior Scientist/Developer working with Prof. Andy Taylor on weak lensing shape measurement calibration and sensitivity.
+    }
+
+%---------------------------------------------------------
+  \cventry
+    {Research Fellow (50\% FTE from Sept. 2021)} % Job title
     {University College London} % Organization
     {London, United Kingdom} % Location
-    {Mar. 2020 - PRESENT} % Date(s)
+    {Apr. 2020 - Sept. 2022} % Date(s)
     {
-    UCL Research Fellow working with Dr. Benjamin Joachimi on Bayesian methods for cosmological galaxy surveys such as the Euclid Satellite.
-    %   \begin{cvitems} % Description(s) of tasks/responsibilities
-    %     \item {Euclid Consortium PDRA}
-    %     \item {Pipeline development, testing, implementation, and validation for Weak Lensing Measurements}
-    %     \item {Line manager: Dr. Benjamin Joachimi}
-    %   \end{cvitems}
+    UCL Research Fellow working with Prof. Benjamin Joachimi on Bayesian methods for cosmological galaxy surveys such as the Euclid Satellite.
     }
     
  \cventry
@@ -44,7 +58,7 @@
     {London, United Kingdom} % Location
     {Dec. 2018 - Dec. 2019} % Date(s)
     {
-    Euclid PDRA working with Dr. Benjamin Joachimi on pipeline development, testing, and validation for Weak Lensing power spectra.
+    Euclid SGS PDRA working with Prof. Benjamin Joachimi on pipeline development, testing, and validation for Weak Lensing power spectra.
     %   \begin{cvitems} % Description(s) of tasks/responsibilities
     %     \item {Euclid Consortium PDRA}
     %     \item {Pipeline development, testing, implementation, and validation for Weak Lensing Measurements}
