--- a/cv/honors.tex
+++ b/cv/honors.tex
@@ -2,7 +2,21 @@
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
 \cvsection{Grants \& Awards}
+%-------------------------------------------------------------------------------
+%	SUBSECTION TITLE
+%-------------------------------------------------------------------------------
 
+\cvsubsection{University College London (United Kingdom)}%{Science without Borders PhD Fellowship (Brazil)}
+\begin{cvhonors}
+
+%---------------------------------------------------------
+  \cvhonor
+    {UCL Provost Strategic Fund Fellowship} % Award
+    {University College London} % Event
+    {£112,554}%/€150,425} % amount
+    {2020-2022} % Date(s)
+
+\end{cvhonors}
 
 %-------------------------------------------------------------------------------
 %	SUBSECTION TITLE
