--- a/cv/languages.tex
+++ b/cv/languages.tex
@@ -23,9 +23,9 @@
     {French} % Category
     {Intermediate (speaking, reading) and basic (writing)} % Skills
 %---------------------------------------------------------
-%   \cvskill
-%     {Spanish} % Category
-%     {Basic (writing, speaking, reading)} % Skills
+  \cvskill
+    {Spanish} % Category
+    {Basic (writing, speaking, reading)} % Skills
 %---------------------------------------------------------
 %   \cvskill
 %     {Languages} % Category
