--- a/cv/outreach.tex
+++ b/cv/outreach.tex
@@ -13,7 +13,7 @@
     {Social Media Engagement} % Role
     {Project Collaborator for \#AstroThreadBR and \#AstroMiniBR } % Event
     {Twitter} % Location
-    {2019-PRESENT} % Date(s)
+    {2019-2022} % Date(s)
     {
       {Engagement with the science enthusiasts community in Brazil via the \#AstroThreadBR and \#AstroMiniBR projects using twitter threads to educate the general public about astronomy. Threads have, on average, a reach of 10-20k impressions.}
     }
