--- a/cv/publications.tex
+++ b/cv/publications.tex
@@ -6,25 +6,74 @@
 %\cvsubsection{Refereed Journal Articles:}
 \vspace{0.4cm}
 \begin{cvitems}
-%\item[1] {\fontsize{9pt}{0} \textit{Upper Bound of Neutrino Masses from Combined Cosmological Observations and Particle Physics Experiments}} 
-\item[1] \href{https://arxiv.org/abs/1811.02578}{\footnotesize{Upper Bound of Neutrino Masses from Combined Cosmological Observations and Particle Physics Experiments}}  
+%--------------------------- 
+\item[1] \textit{\href{https://arxiv.org/abs/2210.13260}{\footnotesize{Almanac: Weak Lensing power spectra and map inference on the masked sphere}} }
 
-\footnotesize{\textbf{A. Loureiro}, A. Cuceu, et al., \textit{Physical Review Letters}, 123 (8), 2019}
+\footnotesize{\textbf{A. Loureiro}, L. Whiteway, E. Sellentin, J. S. Lafaurie, A. H. Jaffe, A. F. Heavens, ArXiv:2210.13260 \textit{Submitted to The OJAp}, 2022}
+%---------------------------
+%---------------------------
+\item[2] \textit{\href{https://arxiv.org/abs/2204.05057}{\footnotesize{Fisher matrix for the angular power spectrum of multi-tracer galaxy surveys}} }
 
-\item[2] \href{https://arxiv.org/abs/1809.07204}{\footnotesize{Cosmological measurements from angular power spectra analysis of BOSS DR12 tomography}}
+\footnotesize{L. R. Abramo, J. V. D. Ferri, I. L. Tashiro \& \textbf{A. Loureiro}, \textit{JCAP}, 08, 2022}
+%---------------------------
+%---------------------------
+\item[3] \textit{\href{https://arxiv.org/abs/2110.06947}{\footnotesize{KiDS \& Euclid: Cosmological implications of a pseudo-$C_{\ell}$ analysis of KiDS-1000 cosmic shear tomography}} }
 
-\footnotesize{\textbf{A. Loureiro}, B. Moraes, et al., \textit{Mon. Notices of the Royal Astronomical Soc.}, 485 (1), 2019}
+\footnotesize{\textbf{A. Loureiro}, L. Whittaker, A. Spurio Mancini,  KiDS Collaboration \& Euclid Consortium, \textit{Astronomy \& Astrophysics}, 665, 2022}
+%---------------------------
+%---------------------------
+\item[4] \textit{\href{https://arxiv.org/abs/2112.07341}{\footnotesize{Euclid: Covariance of weak lensing pseudo-$C_{\ell}$ estimates.}}  }
 
-\item[3] \href{https://arxiv.org/abs/1505.04106}{\footnotesize{Fourier analysis of multitracer cosmological surveys}}
+\footnotesize{{R. Upham} et al. (incl. \textbf{A. Loureiro}),  \textit{Astronomy \& Astrophysics}, A114 (660), 2022}
+%---------------------------
+%---------------------------
+\item[5] \textit{\href{https://arxiv.org/abs/2206.01620}{\footnotesize{Euclid preparation: XX. The Complete Calibration of the Color-Redshift Relation survey: LBT observations and data release}}  }
 
-\footnotesize{L. R. Abramo, L. F. Secco \& \textbf{A. Loureiro}, \textit{Mon. Notices of the Royal Astronomical Soc.}, 455 (4), 2016}
+\footnotesize{{R. Saglia} et al. (incl. \textbf{A. Loureiro}),  \textit{Astronomy \& Astrophysics}, 196E (664A), 2022}
+%---------------------------
+%---------------------------
+\item[6] \textit{\href{https://arxiv.org/abs/2206.14944}{\footnotesize{Euclid preparation: XXIII. Derivation of galaxy physical properties with deep learning using mock fluxes and H-band images}}  }
+
+\footnotesize{{L. Bisigello} et al. (incl. \textbf{A. Loureiro}), ArXiv:2206.14944, \textit{Submitted to MNRAS}, 2022 }
+%---------------------------
+%---------------------------
+\item[7] \textit{\href{https://arxiv.org/abs/2208.02174}{\footnotesize{Euclid preparation. XXIV. Calibration of the halo mass function in $\Lambda(\nu)$CDM cosmologies}}  }
+
+\footnotesize{{T. Castro} et al. (incl. \textbf{A. Loureiro}), ArXiv:2208.02174, \textit{Submitted to A\&A}, 2022 }
+%---------------------------
+%---------------------------
+\item[8] \textit{\href{https://arxiv.org/abs/2209.12906}{\footnotesize{Euclid preparation. XXV. The Euclid Morphology Challenge -- Towards model-fitting photometry for billions of galaxies}}  }
+
+\footnotesize{{E. Merlin} et al. (incl. \textbf{A. Loureiro}), ArXiv:2209.12906, \textit{Submitted to A\&A}, 2022 }
+%---------------------------
+%---------------------------
+\item[9] \textit{\href{https://arxiv.org/abs/2209.12907}{\footnotesize{Euclid preparation XXVI: The Euclid Morphology Challenge. Towards structural parameters for billions of galaxies}}  }
+
+\footnotesize{{H. Bretonnie\`ere} et al. (incl. \textbf{A. Loureiro}), ArXiv:2209.12907, \textit{Submitted to A\&A}, 2022 }
+%---------------------------
+%---------------------------
+\item[10] \textit{\href{https://arxiv.org/abs/1811.02578}{\footnotesize{Upper Bound of Neutrino Masses from Combined Cosmological Observations and Particle Physics Experiments}}  }
+
+\footnotesize{\textbf{A. Loureiro}, A. Cuceu, et al., \textit{Physical Review Letters}, 123, 2019}
+%---------------------------
+%---------------------------
+\item[11] \textit{\href{https://arxiv.org/abs/1809.07204}{\footnotesize{Cosmological measurements from angular power spectra analysis of BOSS DR12 tomography}}}
+
+\footnotesize{\textbf{A. Loureiro}, B. Moraes, et al., \textit{Mon. Notices of the Royal Astronomical Soc.}, 485, 2019}
+%---------------------------
+%---------------------------
+\item[12] \textit{\href{https://arxiv.org/abs/1505.04106}{\footnotesize{Fourier analysis of multitracer cosmological surveys}}}
+
+\footnotesize{L. R. Abramo, L. F. Secco \& \textbf{A. Loureiro}, \textit{Mon. Notices of the Royal Astronomical Soc.}, 455, 2016}
+%---------------------------
+%---------------------------
 
 \vspace{0.4cm}
-\hspace{-0.4cm}\textbf{Under internal review:}
+\hspace{-0.4cm}\textbf{Publications under collaboration review:}
 
-\item \footnotesize{  Cosmological implications of a pseudo angular power spectrum analysis of KiDS-1000 cosmic shear tomography}
-
-\footnotesize{\textbf{A. Loureiro}, L. Whittaker, A. Spurio Mancini \& KiDS Collaboration (\textit{To be submited to A\&A})}
+\item[1] \footnotesize{E. Sellentin, {\textbf{A. Loureiro}}, et al., \textit{Almanac: MCMC-based signal extraction of power spectra and maps on the sphere}}
+\item[2] \footnotesize{N. Tessore, {\textbf{A. Loureiro}}, et al., \textit{GLASS: Generator for Large Scale Structure}}
+\item[3] \footnotesize{H. Johnston, et al. (incl. {\textbf{A. Loureiro}}), \textit{Forecasting gains from joint weak lensing and galaxy clustering analyses with spectroscopic-photometric galaxy cross-correlations}}
 
 \vspace{0.4cm}
 \end{cvitems}
