--- a/cv/references.tex
+++ b/cv/references.tex
@@ -8,8 +8,18 @@
 
 %---------------------------------------------------------
   \cventry
+    {Chair in Astrostatistics} % Affiliation/role
+    {Prof. Alan Heavens} % Organization/group
+    {Imperial College London} % Location
+    {} % Date(s)
+    {
+      Contact: {a.heavens@imperial.ac.uk}
+    }
+
+%---------------------------------------------------------
+  \cventry
     {Reader in Astronomy} % Affiliation/role
-    {Dr. Benjamin Joachimi} % Organization/group
+    {Prof. Benjamin Joachimi} % Organization/group
     {University College London} % Location
     {} % Date(s)
     {
@@ -17,19 +27,10 @@
     }
     
 %
+
 %---------------------------------------------------------
   \cventry
-    {Chair in Astrostatistics and Director of Imperial Center for Cosmological Inference} % Affiliation/role
-    {Prof. Alan Heavens} % Organization/group
-    {Imperial College London} % Location
-    {} % Date(s)
-    {
-      Contact: {a.heavens@imperial.ac.uk}
-    }
-    
-%---------------------------------------------------------
-  \cventry
-    {Professor of Astrophysics and Cosmology} % Affiliation/role
+    {Professor of Astrophysics and Cosmology and Director of Imperial Center for Cosmological Inference} % Affiliation/role
     {Prof. Andrew Jaffe} % Organization/group
     {Imperial College London} % Location
     {} % Date(s)
@@ -37,21 +38,21 @@
       Contact: {a.jaffe@imperial.ac.uk}
     }
 
-%---------------------------------------------------------
-  \cventry
-    {Professor at the Department of Physics and Astronomy} % Affiliation/role
-    {Prof. Ofer Lahav} % Organization/group
-    {University College London} % Location
-    {} % Date(s)
-    {
-      Contact: {o.lahav@ucl.ac.uk}
-    }
+% %---------------------------------------------------------
+%   \cventry
+%     {Professor at the Department of Physics and Astronomy} % Affiliation/role
+%     {Prof. Ofer Lahav} % Organization/group
+%     {University College London} % Location
+%     {} % Date(s)
+%     {
+%       Contact: {o.lahav@ucl.ac.uk}
+%     }
 
 %---------------------------------------------------------
   \cventry
     {Professor at the Mathematical Physics Department} % Affiliation/role
     {Prof. L. Raul Abramo} % Organization/group
-    {University of Sao Paulo} % Location
+    {University of São Paulo} % Location
     {} % Date(s)
     {
      Contact: abramo@if.usp.br 
