--- a/cv/skills.tex
+++ b/cv/skills.tex
@@ -12,20 +12,25 @@
 %---------------------------------------------------------
   \cvskill
     {Programming} % Category
-    {Advanced Python, Jupyter Notebook, Bash/TCShell and Slurm for HPC; intermediate C/C++, Mathematica, SQL.} % Skills
+    {Advanced Python, Jupyter Notebook, Bash, and Slurm for HPC; intermediate C/C++, Mathematica, SQL.} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Cosmological Codes} % Category
-    {CLASS, Hi-CLASS, CAMB, CosmoMC, Monte Python, Flask, CCL, Healpix.} % Skills
+    {CLASS, Hi-CLASS, CAMB, Monte Python, Flask, CCL, Healpix, and Glass (co-developer)} % Skills
 %---------------------------------------------------------
   \cvskill
     {Peer Reviewer} % Category
-    {Journal of Cosmology and Astroparticle Physics}
+    {Journal of Cosmology and Astroparticle Physics, Montly Notices of the Royal Astronomic Society}
 
 \cvskill
-    {Others} % Category
-    {Post-Doc Representative at UCL's Astrophysics Group (2020-Present)}
+    {Leadership Roles} % Category
+    {PDRA Representative at UCL's Astro Group (2020-2022), Co-Leading Euclid LE3 Weak Lensing Pre-Launch Key Project}
+    {}
+\cvskill
+    {Languages} % Category
+    {\textbf{English}: Fluent (speaking, reading, writting); \textbf{Portuguese}: Native; \newline \textbf{French}: Intermediate (speaking, reading) and basic (writing); \textbf{Spanish}: Basic (writing, speaking, reading);}
+    {}
 %   \cvskill
 %     {Languages} % Category
 %     {English: fluent (speaking, reading, writing); Portuguese: native language;  French: intermediate (speaking, reading) and basic (writing); Spanish: basic (writing, speaking,
