--- a/cv/talks.tex
+++ b/cv/talks.tex
@@ -10,6 +10,60 @@
 \begin{cvhonors}
 %---------------------------------------------------------
   \cvhonor
+    {Cosmology Talk } % Position
+    {The Oskar Klein Centre, Stockholm Universty} % Committee
+    {Stockholm, SE} % Location
+    {2023} % Date(s)
+%---------------------------------------------------------
+  \cvhonor
+    {Talk at GR effects in observing the Large-Scale Structure of the Universe } % Position
+    {Universidade do Porto} % Committee
+    {Porto, PT} % Location
+    {2022} % Date(s)
+%---------------------------------------------------------
+  \cvhonor
+    {Cosmology Seminar} % Position
+    {Queen Mary University of London} % Committee
+    {London, UK} % Location
+    {2022} % Date(s)
+%---------------------------------------------------------
+  \cvhonor
+    {Cosmology Seminar} % Position
+    {University of Portsmouth} % Committee
+    {Portsmouth, UK} % Location
+    {2022} % Date(s)
+%---------------------------------------------------------
+  \cvhonor
+    {Cosmology Group Talk} % Position
+    {University of São Paulo} % Committee
+    {São Paulo, BR} % Location
+    {2021} % Date(s)
+%---------------------------------------------------------
+  \cvhonor
+    {Stobie Talk on Science Funding Crisis in Brazil} % Position
+    {University of Edinburgh} % Committee
+    {Edinburgh, UK} % Location
+    {2021} % Date(s)
+%---------------------------------------------------------
+  \cvhonor
+    {Cosmology Seminar at the PPGCosmo} % Position
+    {Federal University of Espirito Santo} % Committee
+    {Vitória, BR} % Location
+    {2021} % Date(s)
+%---------------------------------------------------------
+  \cvhonor
+    {Talk at the DES Harmonic Space Working Group} % Position
+    {Dark Energy Survey} % Committee
+    {Online} % Location
+    {2021} % Date(s)
+%---------------------------------------------------------
+  \cvhonor
+    {Cosmology Seminar} % Position
+    {CosmoStat, Commissariat à l'énergie atomique (CEA)} % Committee
+    {Saclay, FR} % Location
+    {2021} % Date(s)
+%---------------------------------------------------------
+  \cvhonor
     {Cosmology Seminar} % Position
     {Max Planck Institute for Astrophysics} % Committee
     {Munich, GE} % Location
@@ -64,13 +118,13 @@
     
   \cvhonor
     {Department of Mathematical Physics Seminar} % Position
-    {University of Sao Paulo} % Committee
-    {Sao Paulo, BR} % Location
+    {University of São Paulo} % Committee
+    {São Paulo, BR} % Location
     {2018} % Date(s)
   \cvhonor
     {Astrophysics Seminar} % Position
     {National Insitute for Space Research} % Committee
-    {S J dos Campos, BR} % Location
+    {SJ dos Campos, BR} % Location
     {2018} % Date(s)
 %---------------------------------------------------------
   \cvhonor
@@ -79,12 +133,12 @@
     {London, UK} % Location
     {2018} % Date(s)
 
-%---------------------------------------------------------
-  \cvhonor
-    {Talk at TESTDE Final Workshop} % Position
-    {Royal Astronomical Society} % Committee
-    {London, UK} % Location
-    {2018} % Date(s)
+% %---------------------------------------------------------
+%   \cvhonor
+%     {Talk at TESTDE Final Workshop} % Position
+%     {Royal Astronomical Society} % Committee
+%     {London, UK} % Location
+%     {2018} % Date(s)
 
 %---------------------------------------------------------
   \cvhonor
@@ -122,8 +176,8 @@
 
   \cvhonor
     {Talk at the J-PAS Warm-up Meeting} % Position
-    {University of Sao Paulo} % Committee
-    {Sao Paulo, BR} % Location
+    {University of São Paulo} % Committee
+    {São Paulo, BR} % Location
     {2015} % Date(s)
 
 \end{cvhonors}
