--- a/cv/teaching.tex
+++ b/cv/teaching.tex
@@ -11,6 +11,18 @@
 
 %---------------------------------------------------------
   \cventry
+    {Teaching Assistant - PhD level} % Affiliation/role
+    {University of Edinburgh} % Organization/group
+    {Edinburgh, UK} % Location
+    {2022} % Date(s)
+    {
+        Teaching assistant at the PhD Hackathon on data analysis (2022)
+    %   \end{cvitems}
+    }
+
+
+%---------------------------------------------------------
+  \cventry
     {Teaching Assistant - Undergraduate level} % Affiliation/role
     {University College London} % Organization/group
     {London, UK} % Location
@@ -41,4 +53,12 @@
     }
 
 %---------------------------------------------------------
+  \cventry
+    {Tutor - High-school level} % Affiliation/role
+    {Private} % Organization/group
+    {Porto Alegre, BR} % Location
+    {2011 - 2013} % Date(s)
+    {
+        Physics \& Mathematics for high-school
+    }
 \end{cventries}
