--- a/cv.tex
+++ b/cv.tex
@@ -29,7 +29,7 @@
 % Color for highlights
 % Awesome Colors: awesome-emerald, awesome-skyblue, awesome-red, awesome-pink, awesome-orange
 %                 awesome-nephritis, awesome-concrete, awesome-darknight
-\colorlet{awesome}{awesome-emerald}
+\colorlet{awesome}{awesome-red}
 % Uncomment if you would like to specify your own color
 % \definecolor{awesome}{HTML}{CA63A8}
 
@@ -54,12 +54,12 @@
 % Available options: circle|rectangle,edge/noedge,left/right
 %\photo[circle,noedge,left]{profile.jpg}
 \name{Arthur}{Loureiro}
-\position{Research Fellow{\enskip\cdotp\enskip} Astrophysics \& Cosmology}
-\address{University College London, Physics \& Astronomy Department, London, UK}
+\position{Senior Scientist \& Research Fellow {\enskip\cdotp\enskip} Astrophysics \& Cosmology}
+\address{Royal Observatory of Edinburgh, University of Edinburgh, Edinburgh, UK \\ Physics \& Astronomy Department, University College London, London, UK}
 %\address{ Visitor at Imperial College London, Physics Department, London, UK}
 
 %\mobile{(+44) 75188 70131}
-\email{arthur.loureiro@ucl.ac.uk}
+\email{arthur.loureiro@ed.ac.uk}
 \homepage{arthurmloureiro.github.io}
 \github{arthurmloureiro}
 %\linkedin{}
@@ -93,16 +93,17 @@
 \input{cv/experience.tex}
 \input{cv/education.tex}
 \input{cv/skills.tex}
-\input{cv/languages.tex}
+\vspace{-0.8cm}
 \input{cv/honors.tex}
-\newpage
+
 \input{cv/publications.tex}
-\input{cv/teaching.tex}
 \input{cv/supervision}
+\input{cv/teaching.tex}
+%\newpage
 \input{cv/outreach.tex}
+\input{cv/events.tex}
 %\newpage
 \input{cv/talks.tex}
-\input{cv/events.tex}
 \input{cv/references.tex}
 
 
