--- a/cv/supervision.tex
+++ b/cv/supervision.tex
@@ -6,12 +6,12 @@
 \cvhonor{Lisa Goh (MSc)} % Position
     {Co-supervisor together with Dr Lee Whittaker and Dr Benjamin Joachimi on a project ``Pseudo-$C_{\ell}$ likelihood for the Euclid galaxy survey"} % Committee
     {UCL} % Location
-    {Oct 2020 - } % Date(s)
+    {2020 - 2021} % Date(s)
 
-\cvhonor{Vincent Yariv (undergrad)} % Position
-    {3rd Year Literature Review supervisor on a project ``A multi-messenger approach to the cosmic expansion tension''} % Committee
-    {UCL} % Location
-    {Oct 2020 - } % Date(s)
+% \cvhonor{Vincent Yariv (undergrad)} % Position
+%     {3rd Year Literature Review supervisor on a project ``A multi-messenger approach to the cosmic expansion tension''} % Committee
+%     {UCL} % Location
+%     {2020 - 2021} % Date(s)
 
 \cvhonor{Andrei Cuceu (undergrad)} % Position
     {Co-supervisor with Dr Bruno Moraes on a Summer Internships (12 weeks) project ``Simultaneous constraints of Cosmology and redshift distribution from galaxy surveys and CMB data" (Funded by RAS)} % Committee
@@ -27,7 +27,7 @@
     {Co-supervisor on a Summer Internship (12 weeks) project ``Creating a Galaxy Clustering Catalogue with PanSTARRS"} % Committee
     {UCL} % Location
     {Summer 2018}
-    
+\newpage
 \cvhonor{Andrei Cuceu (undergrad)} % Position
     {Co-supervisor with Dr Bruno Moraes on a Summer Internship (12 weeks) project ``Cosmological Constraints from Supernova Surveys and Planck CMB data"} % Committee
     {UCL} % Location
